# personal-agent-theorem-proving

./: .envrc  .gitignore  .mcp.json  AI_CONTEXT.md  HANDOFF-2026-06-21-multi-lemma-testing.md  HANDOFF-2026-06-21-trace-decompose.md  HANDOFF-closer-battery.md  HANDOFF-dev-baseline.md  HANDOFF-escalation-concept-synthesis.md  LEAN-PROVE-PIPELINE.md  Makefile  PLAN-definition-synthesis.md  PLAN-trim-dag.md  PROVENANCE.md  README.md  WORKFLOW-AND-THESIS.md  finish_setup.sh  hyperion-as-lean-prover-baseline.md  lean-prover-master-build-plan.md  setup.sh
agents/hyperion/: .env.example  .gitignore  Dockerfile  PLAN.md  PLAN_TRACE_FLOW.md  PLAN_UNIFIED.md  README.md  docker-compose.lean.yml  docker-compose.override.yml  pyproject.toml
agents/hyperion/archive/: PLAN_UPGRADES.superseded.md  hyperion-ui-PLAN.superseded.md
agents/hyperion/config/: model_registry.json  models.json
agents/hyperion/evals/: EVAL-PROTOCOL.md
agents/hyperion/lean-sidecar/: Dockerfile  README.md  Scratch.lean  lakefile.lean  server.py
agents/hyperion/scripts/: create_hyperion_key.sh  init_qdrant.py  lean_prove_failure_classifier.py  seed_agents.py
agents/hyperion/tests/: conftest.py  lean_mock.py  test_abstractor.py  test_agent_loop.py  test_agents_api.py  test_api.py  test_birth_ablation.py  test_candidate_from_lemma.py  test_compare.py  test_compiler.py  test_concept_bank.py  test_concept_synthesis.py  test_conftest_lean_gate.py  test_context.py  test_context_passing.py  test_crewai_contract.py  test_eval.py  test_feedback.py  test_followup.py  test_followup_api.py  test_hitl.py  (+22 more)
(+146 files in other folders)
