[project]
name = "hyperion"
version = "0.1.0"
description = "Self-hosted multi-agent AI system (CrewAI + LiteLLM + Qdrant)"
readme = "README.md"
authors = [
    { name = "Charlie Tolleson", email = "charlietolleson@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "crewai==0.86.0",  # exact pin: P3/P4 callback workarounds are version-sensitive; test before bumping
    "crewai-tools>=0.20.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "langfuse>=2.53",
    "mcp>=1.6",
    "openai>=1.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "qdrant-client>=1.9",
    "setuptools<70",  # crewai 0.86.0 imports pkg_resources; setuptools>=70 removes it
    "uvicorn[standard]>=0.30",
]

[project.scripts]
hyperion-api = "hyperion.server.api:main"
hyperion-mcp = "hyperion.server.mcp:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
]
